<resources>
    <string name="app_name">Message Helper</string>
    <string name="app_setting">Setting</string>
    <string name="send_mode_base">Base Mode</string>
    <string name="send_mode_csv">CSV File Mode</string>
    <string name="send_mode_notion">Notion Database Mode</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="view_job_title">Job</string>

    <!-- Preference Titles -->
    <string name="messages_header">Jobs Base</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="sim_cart_times">每 X 次发送后，播放通知</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_new_job_csvmode">NewJobCSVMode</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="csv_file_desc">CSV 文件需要符合模版文件的格式。以手机号码、短信文本的两个栏位构成。</string>
    <string name="job_title">任務標題</string>
    <string name="send_interval">發送間隔（秒）</string>
    <string name="send_interval_hint">秒</string>
    <string name="back_number">回測號碼</string>
    <string name="back_number_hint">+86</string>
    <string name="back_number_loop">每 X 次執行回測</string>
    <string name="back_number_loop_hint"></string>

    <string name="receiver_number">接收號碼（一行一個號碼）</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="message_content">信息內容</string>
    <string name="message_content_hint">Text</string>
    <string name="selectCSVFile_text">选择 CSV 文件</string>
    <string name="openCSVTemplate_text">打开模版 CSV 文件</string>
    <string name="notion_database_url">Notion Database URL</string>
    <string name="notion_database_url_hint">URL</string>
    <string name="new_send_mode">发送模式</string>
    <string name="new_base_mode">基本发送模式</string>
    <string name="job_title_hint" />
    <string name="save_button">Save</string>
    <string name="sim_card">SIM Card</string>
    <string name="this_phone_number">Phone Number</string>
    <string name="run_button_title">Run</string>
    <string name="agree">Agree</string>
    <string name="ok">OK</string>
    <string name="cancel">取消</string>
</resources>
