<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/AppBarLayout"
        layout="@layout/app_bar_with_back" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <include
                android:id="@+id/ShareForm"
                layout="@layout/share_new_job_form" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/receiver_number"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

            <EditText
                android:id="@+id/PhoneNumbers"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/phone_number_hint"
                android:inputType="textMultiLine"
                android:lines="8"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/message_content"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

            <EditText
                android:id="@+id/message"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/message_content_hint"
                android:inputType="textMultiLine"
                android:lines="5" />

            <include
                android:id="@+id/SaveButton"
                layout="@layout/share_new_job_save_button" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
