<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.viewJobs.ViewJob">

    <include
        android:id="@+id/AppBarLayout"
        layout="@layout/app_bar_with_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SIM 卡資料"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sim_card"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/SIMCardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="SIMCardText"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/this_phone_number"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/PhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="SIMCardText"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="任務設定"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="模式"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/modeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="modeText"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send_interval"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/send_interval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="interval(S)"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/back_number"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/backNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="Number"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="狀態"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="全部"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/num_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="num_sented"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="已發送"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/num_been_sent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="num_sented"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="未發送"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/num_will_sent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="num_sented"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="等待"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/now_send_interval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="(S)"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="接收號碼"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/now_send_to_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="send_to_number"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message_content"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                    <TextView
                        android:id="@+id/now_message_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="now_message_content"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/runButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RUN" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
